Scheming/parser.js
SCHEEM = (function () {
    /*
    * Generated by PEG.js 0.7.0.
    *
    * http://pegjs.majda.cz/
    */

    function quote(s) {
        /*
        * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
        * string literal except for the closing quote character, backslash,
        * carriage return, line separator, paragraph separator, and line feed.
        * Any character may appear in the form of an escape sequence.
        *
        * For portability, we also escape escape all control and non-ASCII
        * characters. Note that "\0" and "\v" escape sequences are not used
        * because JSHint does not like the first and IE the second.
        */
        return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
    }

    var result = {
        /*
        * Parses the input with a generated parser. If the parsing is successfull,
        * returns a value explicitly or implicitly specified by the grammar from
        * which the parser was generated (see |PEG.buildParser|). If the parsing is
        * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
        */
        parse: function (input, startRule) {
            var parseFunctions = {
                "expression": parse_expression,
                "startparens": parse_startparens,
                "endparens": parse_endparens,
                "validchar": parse_validchar,
                "validfirstchar": parse_validfirstchar,
                "digit": parse_digit,
                "number": parse_number,
                "atom": parse_atom,
                "atomwhitespace": parse_atomwhitespace,
                "atomlist": parse_atomlist,
                "expressionlistencl": parse_expressionlistencl,
                "expressionlistenclwhtspc": parse_expressionlistenclwhtspc,
                "whitespace": parse_whitespace,
                "quote": parse_quote,
                "comment": parse_comment
            };

            if (startRule !== undefined) {
                if (parseFunctions[startRule] === undefined) {
                    throw new Error("Invalid rule name: " + quote(startRule) + ".");
                }
            } else {
                startRule = "expression";
            }

            var pos = 0;
            var reportFailures = 0;
            var rightmostFailuresPos = 0;
            var rightmostFailuresExpected = [];

            function padLeft(input, padding, length) {
                var result = input;

                var padLength = length - input.length;
                for (var i = 0; i < padLength; i++) {
                    result = padding + result;
                }

                return result;
            }

            function escape(ch) {
                var charCode = ch.charCodeAt(0);
                var escapeChar;
                var length;

                if (charCode <= 0xFF) {
                    escapeChar = 'x';
                    length = 2;
                } else {
                    escapeChar = 'u';
                    length = 4;
                }

                return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
            }

            function matchFailed(failure) {
                if (pos < rightmostFailuresPos) {
                    return;
                }

                if (pos > rightmostFailuresPos) {
                    rightmostFailuresPos = pos;
                    rightmostFailuresExpected = [];
                }

                rightmostFailuresExpected.push(failure);
            }

            function parse_expression() {
                var result0;

                result0 = parse_atom();
                if (result0 === null) {
                    result0 = parse_expressionlistencl();
                }
                return result0;
            }

            function parse_startparens() {
                var result0;

                if (input.charCodeAt(pos) === 40) {
                    result0 = "(";
                    pos++;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("\"(\"");
                    }
                }
                return result0;
            }

            function parse_endparens() {
                var result0;

                if (input.charCodeAt(pos) === 41) {
                    result0 = ")";
                    pos++;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("\")\"");
                    }
                }
                return result0;
            }

            function parse_validchar() {
                var result0;

                if (/^[0-9a-zA-Z_?!+\-=@#$%^&*\/.]/.test(input.charAt(pos))) {
                    result0 = input.charAt(pos);
                    pos++;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("[0-9a-zA-Z_?!+\\-=@#$%^&*\\/.]");
                    }
                }
                return result0;
            }

            function parse_validfirstchar() {
                var result0;

                if (/^[a-zA-Z_?!+\-=@#$%^&*\/.]/.test(input.charAt(pos))) {
                    result0 = input.charAt(pos);
                    pos++;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("[a-zA-Z_?!+\\-=@#$%^&*\\/.]");
                    }
                }
                return result0;
            }

            function parse_digit() {
                var result0;

                if (/^[0-9]/.test(input.charAt(pos))) {
                    result0 = input.charAt(pos);
                    pos++;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("[0-9]");
                    }
                }
                return result0;
            }

            function parse_number() {
                var result0, result1;
                var pos0;

                pos0 = pos;
                result1 = parse_digit();
                if (result1 !== null) {
                    result0 = [];
                    while (result1 !== null) {
                        result0.push(result1);
                        result1 = parse_digit();
                    }
                } else {
                    result0 = null;
                }
                if (result0 !== null) {
                    result0 = (function (offset, digits) { return parseInt(digits.join("")); })(pos0, result0);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_atom() {
                var result0, result1, result2;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                result0 = parse_validfirstchar();
                if (result0 !== null) {
                    result1 = [];
                    result2 = parse_validchar();
                    while (result2 !== null) {
                        result1.push(result2);
                        result2 = parse_validchar();
                    }
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, first, rest) { return ([first].concat(rest)).join(""); })(pos0, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                if (result0 === null) {
                    result0 = parse_quote();
                    if (result0 === null) {
                        result0 = parse_number();
                    }
                }
                return result0;
            }

            function parse_atomwhitespace() {
                var result0, result1;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                result0 = parse_whitespace();
                if (result0 !== null) {
                    result1 = parse_atom();
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, space, atom) { return atom; })(pos0, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_atomlist() {
                var result0, result1, result2;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                result0 = parse_atom();
                if (result0 !== null) {
                    result1 = [];
                    result2 = parse_atomwhitespace();
                    while (result2 !== null) {
                        result1.push(result2);
                        result2 = parse_atomwhitespace();
                    }
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, first, rest) { return [first].concat(rest); })(pos0, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_expressionlistencl() {
                var result0, result1, result2, result3;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                result0 = parse_startparens();
                if (result0 !== null) {
                    result1 = parse_atom();
                    if (result1 === null) {
                        result1 = parse_expressionlistencl();
                    }
                    if (result1 !== null) {
                        result2 = [];
                        result3 = parse_atomwhitespace();
                        if (result3 === null) {
                            result3 = parse_expressionlistenclwhtspc();
                        }
                        while (result3 !== null) {
                            result2.push(result3);
                            result3 = parse_atomwhitespace();
                            if (result3 === null) {
                                result3 = parse_expressionlistenclwhtspc();
                            }
                        }
                        if (result2 !== null) {
                            result3 = parse_endparens();
                            if (result3 !== null) {
                                result0 = [result0, result1, result2, result3];
                            } else {
                                result0 = null;
                                pos = pos1;
                            }
                        } else {
                            result0 = null;
                            pos = pos1;
                        }
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, start, first, rest, end) { return [first].concat(rest); })(pos0, result0[0], result0[1], result0[2], result0[3]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_expressionlistenclwhtspc() {
                var result0, result1;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                result0 = parse_whitespace();
                if (result0 !== null) {
                    result1 = parse_expressionlistencl();
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, white, rest) { return rest; })(pos0, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_whitespace() {
                var result0, result1;

                if (/^[' '\t\r\n]/.test(input.charAt(pos))) {
                    result1 = input.charAt(pos);
                    pos++;
                } else {
                    result1 = null;
                    if (reportFailures === 0) {
                        matchFailed("[' '\\t\\r\\n]");
                    }
                }
                if (result1 !== null) {
                    result0 = [];
                    while (result1 !== null) {
                        result0.push(result1);
                        if (/^[' '\t\r\n]/.test(input.charAt(pos))) {
                            result1 = input.charAt(pos);
                            pos++;
                        } else {
                            result1 = null;
                            if (reportFailures === 0) {
                                matchFailed("[' '\\t\\r\\n]");
                            }
                        }
                    }
                } else {
                    result0 = null;
                }
                return result0;
            }

            function parse_quote() {
                var result0, result1;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                if (input.charCodeAt(pos) === 39) {
                    result0 = "'";
                    pos++;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("\"'\"");
                    }
                }
                if (result0 !== null) {
                    result1 = parse_expression();
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, start, next) { return ["quote"].concat(next); })(pos0, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_comment() {
                var result0, result1, result2;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                if (input.substr(pos, 2) === ";;") {
                    result0 = ";;";
                    pos += 2;
                } else {
                    result0 = null;
                    if (reportFailures === 0) {
                        matchFailed("\";;\"");
                    }
                }
                if (result0 !== null) {
                    result1 = [];
                    if (input.length > pos) {
                        result2 = input.charAt(pos);
                        pos++;
                    } else {
                        result2 = null;
                        if (reportFailures === 0) {
                            matchFailed("any character");
                        }
                    }
                    while (result2 !== null) {
                        result1.push(result2);
                        if (input.length > pos) {
                            result2 = input.charAt(pos);
                            pos++;
                        } else {
                            result2 = null;
                            if (reportFailures === 0) {
                                matchFailed("any character");
                            }
                        }
                    }
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function (offset, start, rest) { return []; })(pos0, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }


            function cleanupExpected(expected) {
                expected.sort();

                var lastExpected = null;
                var cleanExpected = [];
                for (var i = 0; i < expected.length; i++) {
                    if (expected[i] !== lastExpected) {
                        cleanExpected.push(expected[i]);
                        lastExpected = expected[i];
                    }
                }
                return cleanExpected;
            }

            function computeErrorPosition() {
                /*
                * The first idea was to use |String.split| to break the input up to the
                * error position along newlines and derive the line and column from
                * there. However IE's |split| implementation is so broken that it was
                * enough to prevent it.
                */

                var line = 1;
                var column = 1;
                var seenCR = false;

                for (var i = 0; i < Math.max(pos, rightmostFailuresPos); i++) {
                    var ch = input.charAt(i);
                    if (ch === "\n") {
                        if (!seenCR) { line++; }
                        column = 1;
                        seenCR = false;
                    } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
                        line++;
                        column = 1;
                        seenCR = true;
                    } else {
                        column++;
                        seenCR = false;
                    }
                }

                return { line: line, column: column };
            }


            var result = parseFunctions[startRule]();

            /*
            * The parser is now in one of the following three states:
            *
            * 1. The parser successfully parsed the whole input.
            *
            *    - |result !== null|
            *    - |pos === input.length|
            *    - |rightmostFailuresExpected| may or may not contain something
            *
            * 2. The parser successfully parsed only a part of the input.
            *
            *    - |result !== null|
            *    - |pos < input.length|
            *    - |rightmostFailuresExpected| may or may not contain something
            *
            * 3. The parser did not successfully parse any part of the input.
            *
            *   - |result === null|
            *   - |pos === 0|
            *   - |rightmostFailuresExpected| contains at least one failure
            *
            * All code following this comment (including called functions) must
            * handle these states.
            */
            if (result === null || pos !== input.length) {
                var offset = Math.max(pos, rightmostFailuresPos);
                var found = offset < input.length ? input.charAt(offset) : null;
                var errorPosition = computeErrorPosition();

                throw new this.SyntaxError(
          cleanupExpected(rightmostFailuresExpected),
          found,
          offset,
          errorPosition.line,
          errorPosition.column
        );
            }

            return result;
        },

        /* Returns the parser source code. */
        toSource: function () { return this._source; }
    };

    /* Thrown when a parser encounters a syntax error. */

    result.SyntaxError = function (expected, found, offset, line, column) {
        function buildMessage(expected, found) {
            var expectedHumanized, foundHumanized;

            switch (expected.length) {
                case 0:
                    expectedHumanized = "end of input";
                    break;
                case 1:
                    expectedHumanized = expected[0];
                    break;
                default:
                    expectedHumanized = expected.slice(0, expected.length - 1).join(", ")
            + " or "
            + expected[expected.length - 1];
            }

            foundHumanized = found ? quote(found) : "end of input";

            return "Expected " + expectedHumanized + " but " + foundHumanized + " found.";
        }

        this.name = "SyntaxError";
        this.expected = expected;
        this.found = found;
        this.message = buildMessage(expected, found);
        this.offset = offset;
        this.line = line;
        this.column = column;
    };

    result.SyntaxError.prototype = Error.prototype;

    return result;
})();